--- a/stylesheets/buttons.less
+++ b/stylesheets/buttons.less
@@ -7,12 +7,12 @@
   background-image: -webkit-linear-gradient(@color, darken(@color, 5%));
 
   &:hover {
-    color: @text-color-highlight;
+    color: lighten(@text-color, 5%); //added this line so the alt color feeds off the default color
     background-image: -webkit-linear-gradient(@hover-color, darken(@hover-color, 5%));
   }
   &.selected,
   &.selected:hover {
-    color: @text-color-highlight;
+    color: lighten(@text-color, 5%); //added this line so the alt color feeds off the default color
     background-image: -webkit-linear-gradient(darken(@selected-color, 5%), @selected-color);
     &:hover {
       background-image: -webkit-linear-gradient(@selected-color, darken(@selected-color, 5%));
@@ -20,11 +20,12 @@
   }
 }
 
-.btn-variant (@color) {
+//Mixin modified to allow different textcolors on colored buttons
+.btn-variant (@color, @text-color) {
   @bg: darken(@color, 10%);
   @hover: @color;
   @selected: @color;
-  .btn-background(@bg, @hover, @selected, @text-color-highlight);
+  .btn-background(@bg, @hover, @selected, @text-color);
 }
 
 .btn {
@@ -32,19 +33,19 @@
 }
 
 .btn.btn-primary {
-  .btn-variant(@background-color-info);
+  .btn-variant(@background-color-info, lighten(saturate(@text-color-info, 0%), 30%));
 }
 .btn.btn-info {
-  .btn-variant(@background-color-info);
+  .btn-variant(@background-color-info, lighten(saturate(@text-color-info, 0%), 30%));
 }
 .btn.btn-success {
-  .btn-variant(@background-color-success);
+  .btn-variant(@background-color-success, lighten(saturate(@text-color-success, 0%), 30%));
 }
 .btn.btn-warning {
-  .btn-variant(@background-color-warning);
+  .btn-variant(@background-color-warning, lighten(saturate(@text-color-warning, 0%), 30%));
 }
 .btn.btn-error {
-  .btn-variant(@background-color-error);
+  .btn-variant(@background-color-error, lighten(saturate(@text-color-error, 0%), 30%));
 }
 
 .caret {
