--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -42,7 +42,7 @@
     border: none;
 
     &, &:before {
-      background-image: -webkit-linear-gradient(top, lighten(#333, 7%), #333);
+      background-image: -webkit-linear-gradient(top, lighten(@tab-default-bg, 7%), @tab-default-bg);
     }
 
     &:before {
