--- a/stylesheets/tree-view.less
+++ b/stylesheets/tree-view.less
@@ -5,18 +5,18 @@
   background: @tree-view-background-color;
 
   .selected:before {
-  	background: #444;
+  	background: @tree-view-selected-bg;
     box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
   }
 }
 
 .focusable-panel {
   opacity: 1;
-  background: #303030;
+  background: @sidebar;
   box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
 
   &:focus {
-    background: #282828;
+    background: @sidebar-focus;
 
     .selected:before {
       background: @background-color-selected;
@@ -26,7 +26,7 @@
     .selected > .name:before,
     .selected > .list-item > .name,
     .selected > .list-item > .name:before {
-      color: #fff !important;
+      color: lighten(@very-light-gray, 15%) !important;
     }
   }
 }
